--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,3 @@
 {deps, [
-    {gproc, ".*", {git, "git@github.com:uwiger/gproc", {tag, "0.2.17"}}}
+    {gproc, ".*", {git, "git@github.com:proger/gproc", {branch, "get_plain_arguments-fix"}}}
 ]}.
