--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,3 @@
 {deps, [
-    {erlsh, ".*", {git, "https://github.com/proger/erlsh", "HEAD"}}
+    {erlsh, ".*", {git, "git://github.com/proger/erlsh", "HEAD"}}
 ]}.
